--- a/css/respon_style.css
+++ b/css/respon_style.css
@@ -68,6 +68,13 @@
         top: -8px;
         position: relative;
     }
+    /* ***************home************* */
+    #home_sec .container{
+        padding-top: 80px ;
+        padding-left: 5px;
+        padding-right: 5px;
+        /* padding-bottom: 20px; */
+    }
     
     .home_col_1{
         flex-basis: 100%;
@@ -107,8 +114,8 @@
     }
     #about_sec .container{
         padding-top: 80px ;
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 5px;
+        padding-right: 5px;
         /* padding-bottom: 0px; */
         
     }
@@ -146,8 +153,8 @@
         height: 195vh;
     }
     #resume_sec .container{
-        padding-left: 15px;
-        padding-right: 15px;
+        padding-left: 5px;
+        padding-right: 5px;
     }
     h2.resume-heading{
         padding-left: 60px;
@@ -177,7 +184,7 @@
         height: 90vh;
     }
     #messege_sec .container{
-        padding: 0 15px;
+        padding: 0 5px;
     }
     h4#ms_center{
         padding-left: 33px;
@@ -197,7 +204,7 @@
         height: 25vh;
     }
     #footer_sec .container{
-        padding: 0 15px;
+        padding: 0 10px;
     }
     #fr{
         display: flex;
@@ -220,7 +227,7 @@
     }
 }
 
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
     .home-col-1,
     .abt_col_1,
     .abt_col_2,
@@ -230,8 +237,8 @@
         text-align: center;
     }
     #home_sec .container {
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 
     .home_col_1 {
@@ -247,4 +254,4 @@
         margin: 2px 3px;
         padding: 0 3px;
     }
-}
+} */
