--- a/css/respon_style.css
+++ b/css/respon_style.css
@@ -25,7 +25,7 @@
         left: -100%;
         width: 25%;
         height: calc(100vh - 50px);
-        background-color: rgba(168, 11, 231, 0.9);
+        background-color: rgba(79, 34, 238, 0.9);
         transition: left 0.3s ease;
     }
 
@@ -235,8 +235,54 @@
         display: flex;
         justify-content: center;
         text-align: center;
-        font-size: 1.3rem;
-        
+        font-size: 1.3rem;  
+    }
+    
+    /* Modal Styles */
+    #imgpreview{
+        display: block;
+    }
+    .modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 15%;
+    top: 0;
+    width: 70%;
+    height: 41%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    .modal-content {
+    margin: 5% auto;
+    padding: 5px;
+    border: 1px solid #888;
+    width: 90%;
+    max-width: 500px;
+    position: relative;
+    }
+
+    .modal-content img {
+    width: 80%;
+    height: auto;
+    }
+
+    .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    }
+
+    .close:hover,
+    .close:focus {
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
     }
 }
 
