--- a/css/respon_style.css
+++ b/css/respon_style.css
@@ -1,7 +1,7 @@
 /* ***********************responcive************ */
 
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
     /* **************head******** */
     header{
         height: 80vh;
@@ -164,7 +164,7 @@
     /* ********resume********** */
     #resume_sec{
         /* background-color: #ce0adf; */
-        height: 400vh;
+        height: 580vh;
     }
     #resume_sec .container{
         padding-left: 10px;
@@ -277,4 +277,33 @@
         margin: 10px 0;
     }
     
+}
+@media (max-width: 600px) {
+
+    .progress-container {
+        width: 100%; 
+        padding: 1px; 
+        margin: 10px 1px;
+        
+    }
+
+    .circular-progress {
+        width: 120px; 
+        height: 120px;
+        font-size: 1.2em;
+    }
+
+    .progress-container h1 {
+        font-size: 2em; 
+    }
+
+    .details {
+        flex-direction: column; 
+        align-items: center;
+    }
+
+    .details div {
+        width: 80%; 
+        margin: 5px 0; 
+    }
 }
