--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ nav {
 }
 
 .skill-card {
-    position: absolute;
+    /* position: absolute; */
     top: 100%;
     left: 50%;
     transform: translateX(-50%);
