--- a/css/respon_style.css
+++ b/css/respon_style.css
@@ -1,13 +1,13 @@
 /* ***********************responcive************ */
 
 
-@media (max-width: 600px) {
+@media (max-width: 760px) {
     /* **************head******** */
     header{
-        height: 80vh;
+        height: 90vh;
     }
     nav{
-        height: 45px;
+        height: 50px;
     }
     #navleft img{
         height: 30px;
@@ -74,10 +74,9 @@
         position: relative;
     }
     /* ***************home************* */
-    #home_sec .container{
-        padding-left: 10px;
-        padding-right: 10px;
-        /* padding-bottom: 20px; */
+    .container{
+        padding: 0, 2px;
+        margin: 3px 5%;
     }
     
     .home_col_1{
@@ -114,7 +113,7 @@
     /* *********about********* */
     #about_sec{
         /* background-color: #ce0adf; */
-        height: 189vh;
+        height: 195vh;
     }
     #about_sec .container{
         padding-top: 80px ;
@@ -134,29 +133,20 @@
     .progress-bar {
         height: 10px;
     }
-    .mt-4 {
-        margin-top: 1rem !important;
+    .about-info li {
+        display: grid; 
+        grid-template-columns: auto 1fr; 
+        column-gap: 6px; 
     }
-    ul.about-info {
-        padding-left: 1px;
-        font-size: 14px;
-        text-align: right;
+
+    .about-info h4 {
+        text-align: left; 
+        flex-basis: auto; 
     }
-    #sn{
-        /* text-align: right; */
-        padding-left: 68px;
-    }
-    #sl{
-        padding-left: 42px;
-    }
-    #sd{
-        padding-left: 12px; 
-    }
-    #sa{
-        padding-left: 10px;
-    }
-    #si{
-        padding-left: 11px;
+
+    .about-info .sr {
+        text-align: right; 
+        flex-basis: auto; 
     }
    
 
@@ -164,14 +154,13 @@
     /* ********resume********** */
     #resume_sec{
         /* background-color: #ce0adf; */
-        height: 580vh;
+        height: 590vh;
     }
     #resume_sec .container{
-        padding-left: 10px;
-        padding-right: 10px;
+        padding: 0 10px;
     }
     h2.resume-heading{
-        padding-left: 60px;
+        padding-left: 100px;
     }
     #rescontent{
         font-size: 14px;
@@ -201,7 +190,7 @@
         padding: 0 5px;
     }
     h4#ms_center{
-        padding-left: 45px;
+        padding-left: 65px;
     }
     form{
         margin: 2px 0px;
@@ -215,7 +204,7 @@
 
     /* *******footer******** */
     #footer_sec{
-        height: 25vh;
+        height: 20vh;
     }
     #footer_sec .container{
         padding: 0 10px;
@@ -238,10 +227,6 @@
         text-align: center;
         font-size: 1.3rem;  
     }
-    /*************imgviewinlarge*************/
-    /* .modal {
-        display: block; 
-    } */
 }
 @media (max-width: 480px) {
     .home_col_1,
@@ -278,7 +263,7 @@
     }
     
 }
-@media (max-width: 600px) {
+@media (max-width: 768px) {
 
     .progress-container {
         width: 100%; 
