--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,21 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: rgb(12, 11, 58);
     color: white;
     
 }
-html{
-    scroll-behavior: smooth;
-}
 
+/*  Header Section  */
 header {
     width: 100%;
     height: 100vh;
     /* background-color: blueviolet; */
-    /* background-image: url("logoimg.png");
-    background-size: cover;
-    background-position: center; */
 }
 
 .container{
@@ -28,6 +27,7 @@ header {
     /* background-color: rgb(154, 119, 186); */
     display: flex;
 }
+
 .row{
     display: flex;
     justify-content: space-between;
@@ -35,48 +35,55 @@ header {
     /* background-color: aqua; */
 }
 
-
 /* *****************nav*************** */
 nav {
     display: flex;
     position: fixed;
-    top:0;
+    top: 0;
     width: 100%;
-    justify-content: space-around; 
-    align-items: center;
     height: 60px;
     background-color: rgb(3, 2, 8);
     z-index: 1000;
 }
 
-#navleft{
+nav .container {
+    display: flex; 
+    width: 100%; 
+    padding: 0 5%;
+    /* background-color: #1abc9c; */
+}
+
+#navleft {
     display: flex;
-    justify-content: space-around; 
     align-items: center;
     /* background-color: rgb(66, 66, 216); */
+    flex: 0.5;
 }
-#navleft img{
+
+#navleft img {
+    background-color: #ffbd39;
     border-radius: 50%;
     height: 35px;
     width: 35px;
 }
-#navleft h2{
+
+#navleft h2 {
     padding: 0 20px;
     font-weight: 900;
     font-size: 18px;
 }
 
-#navright{
+#navright {
     display: flex;
+    justify-content: flex-end; 
     /* background-color: rgb(11, 11, 236); */
+    flex: 1.5;
 
 }
+
 #navright ul {
     display: flex;
-    justify-content: center;
     align-items: center;
-    padding-left:100px;
-   
 }
 
 #navright ul li {
@@ -91,230 +98,66 @@ nav {
     padding: 3px;
     position: relative;
 }
-#navright ul li a ::after{
+
+#navright ul li a::after {
     content: '';
     width: 0;
     height: 3px;
-    background-color: #670870;
+    background-color: #fab134;
     position: absolute;
-    left:0 ;
-    bottom: -2px ;
+    left: 0;
+    bottom: -2px;
     transition: 0.5s;
 }
-/* #navright ul li a:hover {
-    font-size: 1.02rem;
-    color: rgb(59, 58, 69);
-} */
-#navright ul li a:hover ::after{
+
+#navright ul li a:hover::after {
     width: 100%;
 }
-/*****************home***************/
-/* #home_sec .container{
-    padding-top: 80px ;
-    padding-left: 50px;
-    padding-right: 50px;
-   
-}
 
-.home_col_1{
-    flex-basis: 49%;
-}
-.home_col_1{
-    padding: 13% 8%;
-}
-.text{
-    padding: 1% 1%;
-}
-#hi{
-    font-size: 28px;
-    color: #9304a0;
-    font-weight: 600;
-    letter-spacing: -2px;
-}
-#myname{
-    font-size: 58px;
-    font-weight: 800;
-}
-#web{
-    font-size: 35px;
-    font-weight: 800;
-    letter-spacing: -1px;
-    color: #ce0adf;
-    display: inline-block;
-    overflow: hidden;
-    white-space: nowrap;
-    box-sizing: border-box;
-    animation: typing 3s steps(20, end), blink-caret .75s step-end infinite;
-
-}
-@keyframes typing {
-    from { width: 0; }
-    to { width: 100%; }
-}
-
-@keyframes blink-caret {
-    from, to { border-color: transparent; }
-    50% { border-color: #ce0adf; }
-}
-#homebtn{
-    margin: 16px 0;
-    display: flex;
-    padding: 5px 5px;
-    align-items: center;
-}
-.btn {
-    display: inline-block;
+.hamburger {
+    display: none;
     cursor: pointer;
-    text-align: center;
-    vertical-align: middle;
-    border-radius: 18px;
-    box-shadow: 0px 24px 36px -11px rgba(0, 0, 0, 0.09);
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 600;
-    height: 6vh;
-    background-color: rgb(239, 239, 79);
-       
-}
-.btn ul {
-    list-style: none;
-    display: block;
-    margin: 0 0px;
-    padding: 1px 3px;
-
 }
 
-.btn ul li a {
-    text-decoration: none;
-    color: rgb(22, 11, 63);
-    text-align: center;
-    padding: 2px 4px;
-    letter-spacing: -1px;
-    
-}
-
-
-.home_col_2 {
-    flex-basis: 49%;
-}
-.home_col_2 img  {
-    height: 87.8vh;
-    width: 100%;
-    border-radius: 5px;
-} */
-
-/* Bubble Animation */
-.bubbles {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    z-index: 1;
-}
-
-.bubbles span {
-    position: absolute;
-    bottom: -100px;
-    width: 30px;
-    height: 30px;
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 50%;
-    animation: bubble-float 10s infinite ease-in-out;
-    box-shadow: 0px 4px 6px rgba(255, 255, 255, 0.2);
-    opacity: 0.8;
-}
-
-.bubbles span:nth-child(odd) {
-    background: rgba(173, 216, 230, 0.15); /* Light blue for variety */
-    filter: blur(3px);
-}
-
-.bubbles span:nth-child(even) {
-    background: rgba(255, 255, 255, 0.2);
-    filter: blur(2px);
-}
-
-.bubbles span:nth-child(1) {
-    left: 10%;
-    width: 40px;
-    height: 40px;
-    animation-duration: 8s;
-}
-
-.bubbles span:nth-child(2) {
-    left: 20%;
-    width: 20px;
-    height: 20px;
-    animation-duration: 12s;
-    animation-delay: 2s;
-}
-
-.bubbles span:nth-child(3) {
-    left: 30%;
-    width: 50px;
-    height: 50px;
-    animation-duration: 15s;
-    animation-delay: 4s;
-}
-
-.bubbles span:nth-child(4) {
-    left: 50%;
-    width: 30px;
-    height: 30px;
-    animation-duration: 10s;
-    animation-delay: 1s;
-}
-
-.bubbles span:nth-child(5) {
-    left: 70%;
-    width: 60px;
-    height: 60px;
-    animation-duration: 14s;
-    animation-delay: 3s;
-}
-
-.bubbles span:nth-child(6) {
-    left: 80%;
-    width: 35px;
-    height: 35px;
-    animation-duration: 10s;
-    animation-delay: 2s;
-}
-
-.bubbles span:nth-child(7) {
-    left: 90%;
+.hamburger div {
     width: 25px;
-    height: 25px;
-    animation-duration: 9s;
-    animation-delay: 4s;
+    height: 3px;
+    background-color: white;
+    margin: 5px;
+    transition: all 0.3s ease;
 }
 
-@keyframes bubble-float {
-    0% {
-        transform: translateY(0) scale(0.9);
-        opacity: 1;
-    }
-    50% {
-        transform: translateY(-50vh) scale(1.1);
-        opacity: 0.7;
-    }
-    100% {
-        transform: translateY(-100vh) scale(1.3);
-        opacity: 0;
-    }
+.hamburger.active div:nth-child(1) {
+    transform: rotate(45deg);
+    top: 8px;
+    position: relative;
 }
 
+.hamburger.active div:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger.active div:nth-child(3) {
+    transform: rotate(-45deg);
+    top: -8px;
+    position: relative;
+}
+
+@media (min-width: 768px) {
+    .menu-img {
+        display: none; 
+    }
+}
+  
+/************************* Home Section *******************************/
 #home_sec {
     background: linear-gradient(135deg, #451453, #010f2e);
     color: #fff;
-    font-family: 'Poppins', sans-serif;
     height: 100vh;
 }
 
 #home_sec .container {
-    padding: 160px 50px;
+    padding: 160px 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -323,7 +166,7 @@ nav {
 
 .home_col_1 {
     flex-basis: 50%;
-    padding: 5%;
+    padding: 3%;
 }
 
 .text {
@@ -473,202 +316,13 @@ nav {
 }
 
 
-/* #home_sec {
-
-    background: linear-gradient(135deg, #5d3f65, #0d1f47);
-    color: #fff;
-    font-family: 'Poppins', sans-serif;
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-
-#home_sec::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('https://i.imgur.com/57f7XTY.png') repeat;
-    opacity: 0.05;
-    animation: moveParticles 30s linear infinite;
-}
-
-@keyframes moveParticles {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-1000px); }
-}
-
-#home_sec .container {
-    position: relative;
-    z-index: 2;
-    padding: 120px 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.home_col_1 {
-    flex-basis: 50%;
-    padding: 5%;
-}
-
-.text {
-    margin-bottom: 30px;
-    text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-}
-
-#hi {
-    font-size: 28px;
-    font-weight: 600;
-    color: #00f260;
-    letter-spacing: -1px;
-    animation: fadeInUp 1s ease-in-out;
-}
-
-@keyframes fadeInUp {
-    from {
-        opacity: 0;
-        transform: translateY(30px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-#myname {
-    font-size: 58px;
-    font-weight: 800;
-    background: linear-gradient(90deg, #06beb6, #48b1bf);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    letter-spacing: 1px;
-    animation: slideInLeft 1.5s ease-in-out;
-}
-
-@keyframes slideInLeft {
-    from {
-        opacity: 0;
-        transform: translateX(-100px);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-#web {
-    font-size: 32px;
-    font-weight: 700;
-    color: #ff8c00;
-    text-transform: uppercase;
-    margin-top: 10px;
-    display: inline-block;
-    overflow: hidden;
-    white-space: nowrap;
-    animation: typing 3s steps(20, end), blink-caret 0.75s step-end infinite;
-}
-
-
-#homebtn {
-    margin-top: 30px;
-    display: flex;
-    gap: 15px;
-}
-
-.btn {
-    display: inline-block;
-    cursor: pointer;
-    text-align: center;
-    padding: 12px 25px;
-    border-radius: 25px;
-    background: linear-gradient(135deg, #ff416c, #ff4b2b);
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 600;
-    box-shadow: 0px 8px 15px rgba(255, 79, 79, 0.2);
-    transition: all 0.3s ease;
-    position: relative;
-    overflow: hidden;
-}
-
-.btn::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: -100%;
-    width: 300%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.1);
-    transform: skewX(45deg);
-    transition: 0.5s;
-    z-index: 0;
-}
-
-.btn:hover::before {
-    left: 100%;
-}
-
-.btn:hover {
-    box-shadow: 0px 12px 20px rgba(255, 79, 79, 0.4);
-    transform: translateY(-3px);
-}
-
-.btn ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    position: relative;
-    z-index: 2;
-}
-
-.btn ul li a {
-    text-decoration: none;
-    color: #fff;
-}
-
-
-.home_col_2 {
-    flex-basis: 45%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.home_col_2 img {
-    width: 80%;
-    max-height: 80vh;
-    border-radius: 10px;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
-    transition: all 0.3s ease;
-    animation: float 4s ease-in-out infinite;
-}
-
-@keyframes float {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(-15px); }
-}
-
-.home_col_2 img:hover {
-    transform: scale(1.05);
-    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.4);
-} */
-
-
 /* *****************about section************** */
 #about_sec{
     /* background-color: #ce0adf; */
-    height: 90vh;
+    height: 100vh;
 }
 #about_sec .container{
-    padding-top: 75px ;
+    padding-top: 80px ;
     padding-left: 50px;
     padding-right: 50px;
     /* padding-bottom: 0px; */
