--- a/css/respon_style.css
+++ b/css/respon_style.css
@@ -42,6 +42,7 @@
         display: block;
         text-align: right;
         padding-top: 10px;
+        padding-right: 10px;
         /* background-color: rgb(11, 236, 172); */
     }
 
@@ -111,7 +112,7 @@
     }
 
     .btn {
-        font-size: 14px;
+        font-size: 12px;
         padding: 8px 16px;
     }
 
@@ -150,8 +151,6 @@
     .abt_col_2 {
         flex-basis: 100%;
         padding: 8px 0;
-        background-color: rgb(29, 29, 114);
-        border-radius: 5px;
     }
 
     .progress {
@@ -184,7 +183,7 @@
     /* ********resume********** */
     #resume_sec {
         /* background-color: #ce0adf; */
-        height: 618vh;
+        height: 610vh;
     }
 
     #resume_sec .container {
